--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sundry</title>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  />
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+    }
+  </style>
+</head>
+<body>
+  <div class="d-flex flex-column justify-content-center w-50 pt-5">
+    <img src="/assets/images/sundry_title_definition.png">
+    <h5  class="align-self-center mt-5">Coming soon...</h5>
+  </div>
+</body>
+</html>
